welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:7: error: '(' expected but identifier found.
else if litMessage()=="R"
        ^BDRBuggle:10: error: ';' expected but 'else' found.
else if litMessage()=="L"
^BDRBuggle:13: error: ';' expected but 'else' found.
else if litMessage()=="I"
^BDRBuggle:17: error: ';' expected but 'else' found.
else if litMessage()=="Z"
^BDRBuggle:19: error: ';' expected but 'else' found.
else if litMessage()=="X"
^BDRBuggle:21: error: ';' expected but 'else' found.
else fini=true			 
^